--- a/style.css
+++ b/style.css
@@ -430,24 +430,39 @@ ul.wp-block-latest-posts li:before {
 	display: none;
 }
 
-
+main,
+footer{
+	margin-left: 330px;
+}
 #Menulat{
-	top: 20px;
+	top: 0px;
 	height: 100%;
 	width: 330px;
 	position: fixed;
-	padding: 0px 5px 5px;
+	padding: 20px 5px 5px;
+	text-align: center;
 	border-right: 2px solid;
 	border-image:linear-gradient(45deg, rgb(109, 50, 218), rgb(187, 16, 16)) 1;
-	text-align: center;
+
 }
 #Menulat ul{
+	height: 100%;
 	padding: 1em;
+	padding-top: 75px;
 }
+
 .partnerimg{
 	width: 100px;
 }
-
+#CCI{
+	vertical-align: bottom;
+	position: absolute;
+	width: 175px;
+	bottom: 30px;
+	left: 85px;
+	margin-left: auto;
+	margin-right: auto;
+}
 /* Links
 ================================ */
 
@@ -639,6 +654,13 @@ a:hover img {
 
 	.logo {
 		max-width: 70%;
+	}
+	main,
+	footer{
+		margin-left: 0;
+	}
+	#Menulat{
+		display: none;
 	}
 
 	.mobile-nav {
@@ -1593,6 +1615,7 @@ li.blocks-gallery-item:before {
 @media print {
 	.menu,
 	.mobile-nav,
+	#Menulat,
 	.nav-links,
 	.post-nav-links,
 	#respond,
