--- a/style.css
+++ b/style.css
@@ -157,11 +157,12 @@ textarea {
 
 article,
 aside,
-header,
 footer,
 section,
 main {
 	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 nav{
 	float: left;
@@ -185,7 +186,19 @@ footer {
 	display: flex;
 	justify-content: space-around;
 }
+/* h4{
+	text-decoration: underline;
+} */
 
+.Partenaires{
+	height: 40px;
+}
+.Partenaires1{
+	height: 80px;
+}
+.Partenaires2{
+	height: 60px;
+}
 /* Color Variables
 ================================ */
 
@@ -448,12 +461,22 @@ footer{
 #Menulat ul{
 	height: 100%;
 	padding: 1em;
-	padding-top: 75px;
 }
 
-.partnerimg{
-	width: 100px;
+div[class^="menu-"]{
+	width: 330px;
+	position: fixed;
+	top: 175px;
 }
+
+.menu{
+	display: inline;	
+}
+
+li[class^="menu-"]{
+	/* padding-bottom: 50px; */
+}
+
 #CCI{
 	vertical-align: bottom;
 	position: absolute;
@@ -463,6 +486,20 @@ footer{
 	margin-left: auto;
 	margin-right: auto;
 }
+ul[class^="menu"]{
+	display: block;
+	height: 100%;
+  	line-height: 100px;
+	
+}
+li[class^="menu-"]{
+	display: block;
+	width: 150px;
+	margin-left:auto;
+	margin-right:auto;
+	text-align: center;
+}
+
 /* Links
 ================================ */
 
@@ -543,7 +580,7 @@ a:hover img {
     border-color: var(--primary-color);
 }
 
-.site-title {
+.site-title{
 	flex: none;
 }
 #main-menu{
@@ -558,7 +595,6 @@ a:hover img {
 
 	.menu-item,
 	.page_item {
-		float: left;
 		margin-right: 1rem;
 		padding: 0.2em;
 		padding-bottom: 1rem;
@@ -641,6 +677,8 @@ a:hover img {
 		grid-template-columns: 1fr 2.2rem;
 		min-height: 3rem;
 	}
+
+
 
 	#nav {
         width: 100%;
@@ -785,7 +823,6 @@ input[type="submit"],
 	margin-bottom: 0.5em;
 	padding: 1rem 1.5rem;
 	transition: all 0.3s ease;
-	background: #fff !important;
 	border-radius: 0 !important;
 	font-family: inherit;
 	font-size: inherit;
@@ -1106,17 +1143,25 @@ input[type="search"]::-webkit-search-decoration {
 /* Content
 ================================ */
 
+.entry-content img{
+	padding-bottom: 20px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 
 hr,
 hr.wp-block-separator {
 	box-sizing: border-box;
 	margin: 2em auto 2em;
-	width: 100%;
 	max-width: 30rem !important;
 	height: 0;
 	overflow: visible;
-	border: 3px solid transparent;
+	border: 1px solid transparent;
 	border-bottom-color: var(--primary-light-color);
+	text-align: center;
+	width: 20%;
+	
 }
 
 .wrap {
@@ -1133,7 +1178,21 @@ hr.wp-block-separator {
 	box-sizing: border-box;
 }
 #header {
-	margin: 1rem 0;
+	height: 116px;
+}
+
+.container-social{
+	position: absolute;
+	right: 25px;
+	top: 25px;
+	float: right;
+	margin-right: 15px;
+}
+
+#SocialM{
+	display: flex;
+	justify-content: space-around;
+	width: 120px;
 }
 
 .wrap:after {
